<resources>
    <string name="app_name">Netfrix</string>
    <string name="back">Back</string>
    <string name="favorite">Favorite</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="rating">Rating</string>
    <string name="summary">Summary</string>
    <string name="status">Status</string>
    <string name="language">Language</string>
    <string name="adult">Adult</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="runtime">Runtime</string>
    <string name="production_companies">Production Companies</string>
    <string name="favorites">Favorites</string>
    <string name="more">More</string>
    <string name="logout">Logout</string>
    <string name="no_favourite">You haven\'t added any favorites yet.</string>
    <string name="n_a">N/A</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email">Email</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="sending_reset_link">Sending reset link...</string>
    <string name="remembered">"Remembered? "</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome Back 👋</string>
    <string name="password">Password</string>
    <string name="toggle_password">Toggle Password</string>
    <string name="forgot_password_question">Forgot Password?</string>
    <string name="don_t_have_an_account">"Don’t have an account? "</string>
    <string name="sign_up">Sign Up</string>
    <string name="refresh_message">Refresh to discover new movies!</string>
    <string name="movies">Movies</string>
    <string name="check_your_internet">Check Your Internet!</string>
    <string name="search_for_movies_and_tv_shows">Search for movies and TV shows</string>
    <string name="no_results_found_for">No results found for \"%1$s\"</string>
    <string name="search">Search...</string>
    <string name="clear_search">Clear search</string>
    <string name="password_reset_email_sent">Password reset email sent</string>
    <string name="settings">Settings</string>
    <string name="change_password">Change Password</string>
    <string name="change_password_arrow">Change Password Arrow</string>
    <string name="notifications">Notifications</string>
    <string name="notifications_enabled">Notifications Enabled</string>
    <string name="you_ll_receive">You\'ll receive notifications from Netfrix!</string>
    <string name="create_account">Create Account ✨</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="toggle_confirm_password">Toggle Confirm Password</string>
    <string name="already_have_an_account">"Already have an account? "</string>

</resources>